Added Readme and more ejs pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,24 +7,30 @@
 </head>
 
 <body>
-    
+
 </body>
     <h1>HOME</h1>
 
     <form action="/books" method="GET">
-        <button type="submit"> 
+        <button type="submit">
             Check our <span style="text-decoration: line-through;">boobs</span> books!
         </button>
     </form>
     <form action="/addBook" method="GET">
-        <button type="submit"> 
+        <button type="submit">
             Add <span style="text-decoration: line-through;">boob</span> book
         </button>
     </form>
 
     <form action="/signin" method="GET">
-        <button type="submit"> 
+        <button type="submit">
             Sign In
+        </button>
+    </form>
+
+    <form action="/dashboard" method="GET">
+        <button type="submit">
+            Dashboard
         </button>
     </form>
 </html>
